[package]
name = "domain_refresher"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoster_tools = { git = "https://github.com/Tockra/hoster_tools.git"}