[package]
name = "domain_refresher"
version = "1.0.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoster_tools = { git = "https://github.com/Tockra/hoster_tools.git"}
serde = "1.0.104"
serde_json = "1.0.48"
reqwest = {version= "0.10.1", features=["blocking","cookies"] } 
chrono = "0.4.10"
regex = "1.3.4"