[package]
name = "domain_refresher"
version = "1.0.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoster_tools = { git = "https://github.com/Tockra/hoster_tools.git"}
serde = "1.0.104"
serde_json = "1.0.48"
reqwest = {version= "0.11.14", features=["blocking","cookies"] } 
chrono = {git="https://github.com/chronotope/chrono.git", branch="main"}
regex = "1.3.4"
external-ip =  {version= "4.2.0", features=["igd"] } 
tokio = {version= "1.25.0", features=["full"] } 